fix goals spacing

--- a/index.css
+++ b/index.css
@@ -84,6 +84,7 @@
 .goal-text {
   font-size: 21px;
   color: #155D27;
+  height: 50px;
 }
 
 .float-child {
